Update 1.Q.1 Easy Questions.md

--- a/DOMAIN1: Security and Risk Management/1.Q.1 Easy Questions.md
+++ b/DOMAIN1: Security and Risk Management/1.Q.1 Easy Questions.md
@@ -534,3 +534,410 @@ More info [here](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/main
 
 ---
 
+23. **How is defined a document that outlines the security needs of an organization, identifies the assets to be protected, and sets the boundaries for how far protection mechanisms should go?**
+
+(A) Standard
+
+(B) Policy
+
+(C) Guideline
+
+(D) Ethics
+
+<details> <summary>Show answer</summary>
+
+   **Correct Answer: (B) Policy**
+   
+A policy is a high-level document that defines an organization's overall approach to security. It outlines what needs to be protected and to what extent. It’s the foundation upon which standards, procedures, and guidelines are built.
+
+More info [here](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/main/DOMAIN1%3A%20Security%20and%20Risk%20Management/1.06%20Develop%2C%20document%2C%20and%20implement%20security%20policy%2C%20standards%2C%20procedures%2C%20and%20guidelines.md#16-develop-document-and-implement-security-policy-standards-procedures-and-guidelines)
+
+</details>
+
+---
+
+24. **What is a procedure in the context of security documentation?**
+
+(A) A minimum security requirement all systems must meet
+
+(B) Suggestions for how standards should be applied in practice
+
+(C) A detailed, step-by-step guide for implementing specific security mechanisms
+
+(D) Personal information
+
+<details> <summary>Show answer</summary>
+
+   **Correct Answer: (C) A detailed, step-by-step guide for implementing specific security mechanisms**
+   
+A procedure is a hands-on, step-by-step document that outlines exactly how to carry out a particular task or security measure. It’s used to ensure consistency and correctness.
+
+More info [here](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/main/DOMAIN1%3A%20Security%20and%20Risk%20Management/1.06%20Develop%2C%20document%2C%20and%20implement%20security%20policy%2C%20standards%2C%20procedures%2C%20and%20guidelines.md#16-develop-document-and-implement-security-policy-standards-procedures-and-guidelines)
+
+</details>
+
+---
+
+25. **What is a procedure in the context of security documentation?**
+
+(A) A minimum security requirement all systems must meet
+
+(B) Suggestions for how standards should be applied in practice
+
+(C) A detailed, step-by-step guide for implementing specific security mechanisms
+
+(D) Personal information
+
+<details> <summary>Show answer</summary>
+
+   **Correct Answer: (C) A detailed, step-by-step guide for implementing specific security mechanisms**
+   
+A procedure is a hands-on, step-by-step document that outlines exactly how to carry out a particular task or security measure. It’s used to ensure consistency and correctness.
+
+More info [here](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/main/DOMAIN1%3A%20Security%20and%20Risk%20Management/1.06%20Develop%2C%20document%2C%20and%20implement%20security%20policy%2C%20standards%2C%20procedures%2C%20and%20guidelines.md#16-develop-document-and-implement-security-policy-standards-procedures-and-guidelines)
+
+</details>
+
+---
+
+
+26. **Which metric tells you how long it should take to recover after a disruption?**
+
+(A) RTO
+
+(B) MTD
+
+(C) SLA
+
+(D) NDA
+
+<details> <summary>Show answer</summary>
+
+   **Correct Answer: (A) RTO**
+   
+RTO (Recovery Time Objective) defines the maximum acceptable amount of time that a system or application can be down after a failure before it must be restored.
+
+More info [here](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/main/DOMAIN1%3A%20Security%20and%20Risk%20Management/1.07%20Identify%2C%20analyze%2C%20assess%2C%20prioritize%2C%20and%20implement%20Business%20Continuity%20(BC)%20requirements.md#17-identify-analyze-assess-prioritize-and-implement-business-continuity-bc-requirements
+)
+
+</details>
+
+---
+
+27. **What is true regarding Permitted Screening Practices?**
+
+(A) They may refer to candidate’s relatives
+
+(B) They may include education verification
+
+(C) They may collect candidate PHIs
+
+(D) They may include discriminatory questions
+
+<details> <summary>Show answer</summary>
+
+   **Correct Answer: (B) They may include education verification**
+   
+Permitted screening practices typically include background checks such as education verification, previous employment, and criminal history. However, they must respect privacy laws and avoid discrimination or overreach.
+
+More info [here](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/main/DOMAIN1%3A%20Security%20and%20Risk%20Management/1.08%20Contribute%20to%20and%20enforce%20personnel%20security%20policies%20and%20procedures.md#181-candidate-screening-and-hiring)
+
+</details>
+
+---
+
+28. **Which of the following defines Separation of Duties (SoD)?**
+
+(A) Rotating employees into different roles or responsibilities
+
+(B) Ensuring that employees only receive the minimum access necessary for their role
+
+(C) A principle ensuring that no single individual has complete control over critical processes
+
+(D) An alternative to seclusion
+
+<details> <summary>Show answer</summary>
+
+   **Correct Answer: (C) A principle ensuring that no single individual has complete control over critical processes**
+   
+Separation of Duties is a key control principle that splits responsibilities among multiple individuals to prevent fraud and error. No one person should be able to perform a sensitive task from start to finish alone.
+
+More info [here](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/main/DOMAIN1%3A%20Security%20and%20Risk%20Management/1.08%20Contribute%20to%20and%20enforce%20personnel%20security%20policies%20and%20procedures.md#182-employment-agreements-and-policy-driven-requirements)
+
+</details>
+
+---
+
+29. **What are the key objectives of a well-structured onboarding process?**
+
+(A) Streamlining employee lifecycle management.
+
+(B) Finding the best candidates.
+
+(C) Make sure clear company roles are defined.
+
+(D) Integrating new employees smoothly and consistently
+
+<details> <summary>Show answer</summary>
+
+   **Correct Answer: (D) A principle ensuring that no single individual has complete control over critical processes**
+   
+A strong onboarding process helps new hires feel welcomed, learn company policies, and get up to speed quickly—helping them contribute faster while reducing turnover.
+
+More info [here](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/main/DOMAIN1%3A%20Security%20and%20Risk%20Management/1.08%20Contribute%20to%20and%20enforce%20personnel%20security%20policies%20and%20procedures.md#183-onboarding-transfers-and-termination-processes
+)
+
+</details>
+
+---
+
+30. **What is the name of a software platform that helps organizations manage third-party vendors?**
+
+(A) Vendor Management System (VMS)
+
+(B) Enterprise Resource Planning (ERP)
+
+(C) Customer Relationship Management (CRM)
+
+(D) Vulnerability Assessment (VA)
+
+<details> <summary>Show answer</summary>
+
+   **Correct Answer: (A) Vendor Management System (VMS)**
+   
+A Vendor Management System (VMS) is used by organizations to assess, onboard, track, and monitor third-party suppliers to ensure compliance and reduce risk.
+
+More info [here](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/main/DOMAIN1%3A%20Security%20and%20Risk%20Management/1.08%20Contribute%20to%20and%20enforce%20personnel%20security%20policies%20and%20procedures.md#184-vendor-consultant-and-contractor-agreements-and-controls)
+
+</details>
+
+---
+
+
+31. **What is a weakness that makes an asset susceptible to harm?**
+
+(A) A threat
+
+(B) A vulnerability
+
+(C) A threat vector
+
+(D) A risk
+
+<details> <summary>Show answer</summary>
+
+   **Correct Answer: (B) A vulnerability**
+   
+A vulnerability is a flaw or weakness in a system that can be exploited by threats to cause harm. It can exist in software, hardware, procedures, or human behavior.
+
+More info [here](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/main/DOMAIN1%3A%20Security%20and%20Risk%20Management/1.09%20Understand%20and%20apply%20risk%20management%20concepts.md#19-understand-and-apply-risk-management-concepts)
+
+</details>
+
+---
+
+32. **Which of the following correctly defines Annualized Loss Expectancy (ALE)?**
+
+(A) EF × ARO
+
+(B) AV × ARO
+
+(C) (AV × EF)
+
+(D) (AV × EF) × ARO
+
+<details> <summary>Show answer</summary>
+
+   **Correct Answer: (D) (AV × EF) × ARO**
+   
+ALE (Annualized Loss Expectancy) estimates the potential yearly loss due to a specific threat. It's calculated using:
+
+AV (Asset Value)
+
+EF (Exposure Factor)
+
+ARO (Annual Rate of Occurrence)
+
+So the formula is: ALE = (AV × EF) × ARO
+
+More info [here](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/main/DOMAIN1%3A%20Security%20and%20Risk%20Management/1.09%20Understand%20and%20apply%20risk%20management%20concepts.md#192-risk-analysis-assessment-and-scope)
+
+</details>
+
+---
+
+33. **Which of the following risk strategies involves shifting some of the risk to another party?**
+
+(A) Risk Mitigation
+
+(B) Risk Transfer
+
+(C) Risk Transfer
+
+(D) Risk Acceptance
+
+<details> <summary>Show answer</summary>
+
+   **Correct Answer: (C) Risk Transfer**
+   
+Risk transfer means assigning the financial or operational burden of a risk to someone else — typically through contracts or insurance. You're not eliminating the risk, but you're not holding the bag if something goes wrong.
+
+More info [here](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/main/DOMAIN1%3A%20Security%20and%20Risk%20Management/1.09%20Understand%20and%20apply%20risk%20management%20concepts.md#193-risk-response-and-treatment-eg-cybersecurity-insurance)
+
+</details>
+
+---
+
+34. **A policy is an example of which type of control?**
+
+(A) Technical
+
+(B) Physical
+
+(C) Administrative
+
+(D) Acceptable
+
+<details> <summary>Show answer</summary>
+
+   **Correct Answer: (C) Administrative**
+   
+Policies fall under administrative controls, which include things like security training, hiring practices, and access agreements. These controls govern people and processes, not technology.
+
+More info [here](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/main/DOMAIN1%3A%20Security%20and%20Risk%20Management/1.09%20Understand%20and%20apply%20risk%20management%20concepts.md#194-applicable-types-of-controls-eg-preventive-detection-corrective)
+
+</details>
+
+---
+
+35. **What is an attack vector?**
+
+(A) The route used—like phishing emails or open network ports—to launch an attack
+
+(B) The chance that a threat will exploit a vulnerability and harm your assets—and how bad that harm would be
+
+(C) The potential danger—a hacker, natural event, or even an insider—and the actor behind it
+
+(D) When someone actually hits you—this is when theory becomes real harm
+
+<details> <summary>Show answer</summary>
+
+   **Correct Answer: (A) The route used—like phishing emails or open network ports—to launch an attack**
+   
+An attack vector is the path or method a threat actor uses to get into your system. Examples include phishing emails, compromised USB drives, or unpatched vulnerabilities.
+
+More info [here](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/main/DOMAIN1:%20Security%20and%20Risk%20Management/1.09%20Understand%20and%20apply%20risk%20management%20concepts.md#19-understand-and-apply-risk-management-concepts)
+
+</details>
+
+---
+
+36. **Which of the following is a family of international standards offering a principles-based, enterprise-wide approach for managing any type of risk?**
+
+(A) ISO 31000
+
+(B) ISO 27001
+
+(C) ISO 27005
+
+(D) ISO 27002
+
+<details> <summary>Show answer</summary>
+
+   **Correct Answer: (A) ISO 31000**
+   
+ISO 31000 is a high-level, globally recognized framework for risk management. It provides principles and general guidelines to help organizations manage any kind of risk — not just information security.
+
+More info [here](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/main/DOMAIN1:%20Security%20and%20Risk%20Management/1.09%20Understand%20and%20apply%20risk%20management%20concepts.md#199-risk-frameworks-eg-international-organization-for-standardization-iso-national-institute-of-standards-and-technology-nist-control-objectives-for-information-and-related-technology-cobit-sherwood-applied-business-security-architecture-sabsa-payment-card-industry-pci)
+
+</details>
+
+---
+
+37. **Which of the following is a seven-stage, risk-centric methodology that aligns threat modeling with business objectives?**
+
+(A) STRIDE
+
+(B) PASTA
+
+(C) COSO
+
+(D) ISO 27001
+
+<details> <summary>Show answer</summary>
+
+   **Correct Answer: (B) PASTA**
+   
+PASTA (Process for Attack Simulation and Threat Analysis) is a detailed and risk-focused methodology for threat modeling. It maps technical risks to business objectives and involves seven stages from definition to remediation planning.
+
+More info [here](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/main/DOMAIN1:%20Security%20and%20Risk%20Management/1.10%20Understand%20and%20apply%20threat%20modeling%20concepts%20and%20methodologies.md#110-understand-and-apply-threat-modeling-concepts-and-methodologies)
+
+</details>
+
+---
+
+38. **Which of the following is a hardware-based security feature that uses manufacturing variations to create unique identifiers?**
+
+(A) Hard Copy
+
+(B) Physically Unclonable Function (PUF)
+
+(C) Silicon Root of Trust
+
+(D) Incremental Backup
+
+<details> <summary>Show answer</summary>
+
+   **Correct Answer: (B) Physically Unclonable Function (PUF)**
+   
+PUF (Physically Unclonable Function) leverages tiny imperfections in hardware manufacturing to create a unique, tamper-resistant identity for each chip. It's used in hardware-level authentication and anti-counterfeiting.
+
+More info [here](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/main/DOMAIN1%3A%20Security%20and%20Risk%20Management/1.11%20Apply%20supply%20chain%20risk%20management%20(SCRM)%20concepts.md#1112-risk-mitigations-eg-third-party-assessment-and-monitoring-minimum-security-requirements-service-level-requirements-silicon-root-of-trust-physically-unclonable-function-software-bill-of-materials)
+
+</details>
+
+---
+
+39. **What is the final goal of awareness, training, and education programs?**
+
+(A) Compliance
+
+(B) Soft skills
+
+(C) Technical skills
+
+(D) A change in user behavior
+
+<details> <summary>Show answer</summary>
+
+   **Correct Answer: (D) A change in user behavior**
+   
+The ultimate goal of security awareness and training is to change user behavior — turning knowledge into safer, more security-conscious actions in the workplace.
+
+More info [here](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/main/DOMAIN1%3A%20Security%20and%20Risk%20Management/1.12%20Establish%20and%20maintain%20a%20security%20awareness%2C%20education%2C%20and%20training%20program.md#1121-methods-and-techniques-to-increase-awareness-and-training-eg-social-engineering-phishing-security-champions-gamification)
+
+</details>
+
+---
+
+40. **Who acts as internal advocates and helps translate security concepts into team-specific actions?**
+
+(A) Project manager
+
+(B) Trainee
+
+(C) DPO
+
+(D) Security champions
+
+<details> <summary>Show answer</summary>
+
+   **Correct Answer: (D) Security champions**
+   
+Security champions are team members — often developers or engineers — who advocate for security within their own departments. They help integrate security into daily workflows and act as liaisons to the security team.
+
+More info [here](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/main/DOMAIN1%3A%20Security%20and%20Risk%20Management/1.12%20Establish%20and%20maintain%20a%20security%20awareness%2C%20education%2C%20and%20training%20program.md#1122-periodic-content-reviews-to-include-emerging-technologies-and-trends-eg-cryptocurrency-artificial-intelligence-ai-blockchain)
+
+</details>
+
+---
