--- a/DOMAIN1: Security and Risk Management/1.Q.2 Hard Questions.md
+++ b/DOMAIN1: Security and Risk Management/1.Q.2 Hard Questions.md
@@ -1,5 +1,4 @@
-1. 1 **During the Risk Assessment process, having compiled an inventory of all your assets, you now seek to assess their vulnerabilities.
-What factors should be considered in this evaluation? (Choose all that apply)
+1. **During the Risk Assessment process, having compiled an inventory of all your assets, you now seek to assess their vulnerabilities. What factors should be considered in this evaluation? (Choose all that apply)**
 (A) Only the asset owners should provide a list of applicable risks
 (B) Every asset has one or more vulnerabilities
 (C) Most valuable asset should be analyzed first
