Update 1.Q.2 Hard Questions.md

--- a/DOMAIN1: Security and Risk Management/1.Q.2 Hard Questions.md
+++ b/DOMAIN1: Security and Risk Management/1.Q.2 Hard Questions.md
@@ -15,5 +15,89 @@
 When assessing vulnerabilities during the Risk Assessment process, it is crucial to consider all relevant factors, including the nature of each asset, potential vulnerabilities associated with them, and prioritization based on value. Risk is sometimes schematized as threat x vulnerability, so we can approximate that If there aren't threats exploiting the vulnerability there is no risk.
 It is not only the asset owners theat should provide a list of applicable risks.
 
-Doubt about the answer, read [here](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/main/DOMAIN1%3A%20Security%20and%20Risk%20Management/1.09%20Understand%20and%20apply%20risk%20management%20concepts.md#19-understand-and-apply-risk-management-concepts)
+Doubt about the answer, read again [here](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/main/DOMAIN1%3A%20Security%20and%20Risk%20Management/1.09%20Understand%20and%20apply%20risk%20management%20concepts.md#19-understand-and-apply-risk-management-concepts)
 </details>
+
+---
+
+2. **Due to a recent data breach, your boss consistently requests updates on Risk Assessment, demonstrating a highly conservative stance towards risks, aiming to prevent as many as possible and potentially over-mitigating them. What best characterizes this situation and how could you react ?**
+
+(A) Your boss is risk prone with an high risk appetite, you should try to increase company's risk tolerance
+
+(B) Your boss is risk averse with an high risk appetite, you should try to increase company's risk tolerance
+
+(C) Your boss is risk averse with a very low risk appetite, you should try to decrease company's risk tolerance
+
+(D) Your boss is risk averse with a very low risk appetite, you should try to increase company's risk tolerance
+
+<details> <summary>Show answer</summary>
+
+  **Correct Answer: (D) Your boss is risk averse with a very low risk appetite, you should try to increase company's risk tolerance**
+
+Given the evident apprehension towards risk in the scenario, it may be advisable to raise the company's tolerance for risk.
+Remember the following definitions:
+Risk Appetite: Risk appetite is the level of risk that an organization is willing to accept in pursuit of its objectives. It reflects the organization's willingness to take risks to achieve its goals and is usually defined at the strategic level.
+Risk Tolerance: Risk tolerance is the specific amount or type of risk that an organization is willing to withstand or tolerate. It represents the acceptable level of variation from the organization's objectives and is more focused on the operational and tactical aspects of risk management.
+
+Doubt about the answer, read again [here](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/main/DOMAIN1%3A%20Security%20and%20Risk%20Management/1.09%20Understand%20and%20apply%20risk%20management%20concepts.md#19-understand-and-apply-risk-management-concepts)
+</details>
+
+---
+
+3. **Your boss has requested focused attention on safeguarding data integrity across all company databases. What actions does this entail for you?**
+
+(A) Data in the databases could be modified only under specific circumstances.
+
+(B) Data in the databases shouldn't be modified without authorization.
+
+(C) Data in the database should remain secret.
+
+(D) Data in the database shouldn't be accessible to anyone.
+
+<details> <summary>Show answer</summary>
+
+  **Correct Answer: (B) Data in the databases shouldn't be modified without authorization.**
+
+The correct answer aligns with the boss's request to preserve data integrity, ensuring that any changes made to the data are authorized to maintain its accuracy and reliability.
+Wrong Answers:
+
+- Data in the databases could be modified only under specific circumstances. This answer introduces ambiguity regarding when data modification is allowed, which contradicts the need for focused attention on safeguarding data integrity.
+
+- Data in the database should remain secret. While data confidentiality is important, the boss's request specifically pertains to data integrity, which involves ensuring the accuracy and reliability of the data, not necessarily keeping it secret.
+
+- Data in the database shouldn't be accessible to anyone. This answer goes against the principle of data usability, which is essential for the database to serve its purpose within the company. While access control is important for security, complete restriction of access is impractical and counterproductive.
+
+Doubt about the answer, read again [here](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/main/DOMAIN1%3A%20Security%20and%20Risk%20Management/1.02%20Understand%20and%20apply%20security%20concepts.md#121-confidentiality-integrity-and-availability-authenticity-and-nonrepudiation-5-pillars-of-information-security)
+</details>
+
+---
+
+4. **A countermeasure is a defensive action or tactic taken to mitigate or neutralize a threat or risk. What countermeasure listed below is the most efficient in preventing eavesdropping?**
+
+(A) A shredder
+
+(B) A policy that restricts the locations where confidential discussions can occur
+
+(C) Data hashing
+
+(D) Cryptography
+
+<details> <summary>Show answer</summary>
+
+  **Correct Answer: (B) A policy that restricts the locations where confidential discussions can occur**
+
+Limiting the places where sensitive conversations can take place reduces the likelihood of eavesdropping, as it minimizes opportunities for unauthorized individuals to overhear confidential information.
+
+Wrong Answers:
+
+- A shredder. While shredding documents can help protect against unauthorized access to sensitive information, it does not directly prevent eavesdropping, which involves secretly listening to conversations or communications.
+
+- Data hashing. Data hashing is a cryptographic technique used to ensure data integrity by generating a fixed-size string of characters from input data. While hashing is an important security measure, it is not specifically designed to prevent eavesdropping.
+
+- Cryptography. Cryptography involves securing communication by encoding messages to prevent unauthorized access or modification. While cryptography is crucial for protecting data during transmission, it does not directly address the issue of eavesdropping, which involves listening to conversations or communications without authorization.
+
+Doubt about the answer, read again [here](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/main/DOMAIN1%3A%20Security%20and%20Risk%20Management/1.02%20Understand%20and%20apply%20security%20concepts.md#121-confidentiality-integrity-and-availability-authenticity-and-nonrepudiation-5-pillars-of-information-security)
+</details>
+
+---
+
