Update 1.Q.2 Hard Questions.md

--- a/DOMAIN1: Security and Risk Management/1.Q.2 Hard Questions.md
+++ b/DOMAIN1: Security and Risk Management/1.Q.2 Hard Questions.md
@@ -101,3 +101,109 @@ Doubt about the answer, read again [here](https://github.com/lorenzoleonelli/CIS
 
 ---
 
+5. **Which of the following attacks typically result in a reduction of availability?**
+
+(A) Power outage, Hardware Failure, Replay attack
+
+(B) Dumpster Diving, Hardware Failure, Replay attack
+
+(C) Power outage, Hardware Failure, DOS attack
+
+(D) Dumpster Diving, Eavesdropping, DOS attack
+
+<details> <summary>Show answer</summary>
+
+  **Correct Answer: (C) Power outage, Hardware Failure, DOS attack**
+
+Power outages and hardware failures directly impact the availability of systems or services by causing them to become unavailable. Additionally, Denial of Service (DOS) attacks deliberately target the availability of services by overwhelming them with excessive traffic or requests, thereby rendering them inaccessible.
+Wrong Answers:
+Power outage, Hardware Failure, Replay attack: While power outages and hardware failures affect availability, a replay attack typically does not directly impact availability but rather focuses on compromising data integrity or confidentiality.
+Dumpster Diving, Hardware Failure, Replay attack: Dumpster diving and replay attacks are not typically associated with reducing availability. Dumpster diving involves searching through discarded materials for sensitive information, which does not directly affect system availability. Replay attacks aim to manipulate data integrity or confidentiality rather than availability.
+Dumpster Diving, Eavesdropping, DOS attack: Dumpster diving and eavesdropping primarily pose risks to data confidentiality rather than availability. While a DOS attack directly targets availability, eavesdropping and dumpster diving are more focused on accessing sensitive information.
+
+Doubt about the answer, read again [here](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/main/DOMAIN1%3A%20Security%20and%20Risk%20Management/1.02%20Understand%20and%20apply%20security%20concepts.md#121-confidentiality-integrity-and-availability-authenticity-and-nonrepudiation-5-pillars-of-information-security)
+</details>
+
+---
+
+6. **What will be the increase in ALE (Annualized Loss of Expectancy) of an hurricane damaging your server room if the EF (Exposure Factor) increases by 10% and AV (Asset Value) and ARO (Annualized Rate of Occurrence) remains unchanged ?**
+
+(A) 1%
+
+(B) 20%
+
+(C) 10%
+
+(D) Not enough data provided
+
+<details> <summary>Show answer</summary>
+
+  **Correct Answer: (C) 10%**
+
+In the process of risk ranking, quantitative analysis involves determining the anticipated annual cost of risk to the organization, known as the Annualized Loss Expectancy (ALE). This can be computed using the formula:
+
+ALE = SLE (AV x EF) x ARO
+
+ALE =  (AV x EF) x ARO
+
+Here, the acronyms correspond to:
+
+AV: Asset Value - The estimated financial worth or value of an asset within an organization.
+
+EF: Exposure Factor - The percentage of asset value likely to be lost in the event of a security breach.
+
+SLE: Single Loss Expectancy - The anticipated monetary loss from a single occurrence of a security incident.
+
+ARO: Annualized Rate of Occurrence - The estimated frequency or likelihood of a security incident occurring within a year.
+
+ALE: Annualized Loss Expectancy - The projected annual financial impact resulting from potential security incidents, calculated by multiplying the SLE by the ARO.
+
+Doubt about the answer, read again [here](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/main/DOMAIN1%3A%20Security%20and%20Risk%20Management/1.09%20Understand%20and%20apply%20risk%20management%20concepts.md#192-risk-analysis-assessment-and-scope)
+</details>
+
+---
+
+7. **A project manager has requested that you review the Risk Register. Upon examination, you noticed it cannot be finalized due to the absence of the following information:**
+
+(A) Threats exploiting the risk
+
+(B) Risk Owner
+
+(C) 3rd party audit
+
+(D) Framework used for the assessment
+
+<details> <summary>Show answer</summary>
+
+  **(B) Risk Owner**
+
+Assigning a Risk Owner is essential to ensure that someone within the organization takes responsibility for managing and mitigating each identified risk, fostering accountability and proactive risk management practices. This individual is tasked with monitoring the risk, implementing appropriate controls, and escalating issues as needed to mitigate potential impacts.
+While threats, audits, and frameworks are relevant components of risk management, they may not always need to be directly documented within the Risk Register, as the primary focus is on identifying and managing specific risks and their associated mitigation strategies. However, these elements can inform risk assessments and help inform decision-making processes regarding risk management strategies. Overall, a comprehensive Risk Register should capture key information about identified risks, their owners, mitigation actions, and ongoing monitoring efforts to ensure effective risk management throughout the organization
+
+Doubt about the answer, read again [here](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/main/DOMAIN1%3A%20Security%20and%20Risk%20Management/1.09%20Understand%20and%20apply%20risk%20management%20concepts.md#197-reporting-eg-internal-external)
+</details>
+
+---
+
+8. **You are tasked with enhancing the security measures for your company's sensitive data storage. In making the decision, what factor should be prioritized when selecting a control or countermeasure?**
+
+(A) Level of risk reduction
+
+(B) Cost
+
+(C) Ease of implementation
+
+(D) Time Required for implementation
+
+<details> <summary>Show answer</summary>
+
+  **(A) Level of risk reduction**
+
+Again 4 correct answers here with 1 answer more correct than others.
+The most correct answer for this question is "Level of risk reduction." While all options are important considerations when selecting a control or countermeasure, prioritizing the level of risk reduction ensures that security measures effectively mitigate potential threats and vulnerabilities. While cost, ease of implementation, and time required for implementation are also relevant factors, they may vary in importance depending on the specific context and objectives of the security enhancement. Ultimately, the primary goal of enhancing security measures for sensitive data storage is to minimize risk exposure and protect the confidentiality, integrity, and availability of the data, making risk reduction the most critical factor to prioritize in decision-making.
+
+Doubt about the answer, read again [here](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/main/DOMAIN1%3A%20Security%20and%20Risk%20Management/1.09%20Understand%20and%20apply%20risk%20management%20concepts.md#19-understand-and-apply-risk-management-concepts)
+</details>
+
+---
+
